k8s/be/deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: be
  name: be
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: be
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: be
    spec:
      containers:
      - image: teamnameis/be:latest
        imagePullPolicy: Always 
        name: be
        ports:
        - containerPort: 5678
          name: grpc
          protocol: TCP
        - containerPort: 1234
          name: rest
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
