k8s/be/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: be
  clusterIP: None
